finished model training

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,6 +101,317 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>time</th>\n",
+       "      <th>ball_speed</th>\n",
+       "      <th>azimuth</th>\n",
+       "      <th>launch_angle</th>\n",
+       "      <th>back_spin</th>\n",
+       "      <th>side_spin</th>\n",
+       "      <th>total_spin</th>\n",
+       "      <th>spin_axis</th>\n",
+       "      <th>carry_distance</th>\n",
+       "      <th>total_distance</th>\n",
+       "      <th>offline_distance</th>\n",
+       "      <th>distance_to_pin</th>\n",
+       "      <th>max_height</th>\n",
+       "      <th>descent_angle</th>\n",
+       "      <th>club_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-02-29</td>\n",
+       "      <td>15:39:15</td>\n",
+       "      <td>32.401264</td>\n",
+       "      <td>14.202585</td>\n",
+       "      <td>4.779126</td>\n",
+       "      <td>-588.0</td>\n",
+       "      <td>-117.0</td>\n",
+       "      <td>599.0</td>\n",
+       "      <td>-168.746277</td>\n",
+       "      <td>15.174751</td>\n",
+       "      <td>52.801117</td>\n",
+       "      <td>11.593853</td>\n",
+       "      <td>95.694733</td>\n",
+       "      <td>0.767064</td>\n",
+       "      <td>5.391288</td>\n",
+       "      <td>Irn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-02-29</td>\n",
+       "      <td>15:39:15</td>\n",
+       "      <td>32.401264</td>\n",
+       "      <td>14.202585</td>\n",
+       "      <td>4.779126</td>\n",
+       "      <td>-588.0</td>\n",
+       "      <td>-117.0</td>\n",
+       "      <td>599.0</td>\n",
+       "      <td>-168.746277</td>\n",
+       "      <td>15.174751</td>\n",
+       "      <td>52.801117</td>\n",
+       "      <td>11.593853</td>\n",
+       "      <td>95.694733</td>\n",
+       "      <td>0.767064</td>\n",
+       "      <td>5.391288</td>\n",
+       "      <td>Irn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-12-04</td>\n",
+       "      <td>18:37:09</td>\n",
+       "      <td>25.904545</td>\n",
+       "      <td>-20.152567</td>\n",
+       "      <td>20.763006</td>\n",
+       "      <td>575.0</td>\n",
+       "      <td>625.0</td>\n",
+       "      <td>849.0</td>\n",
+       "      <td>47.385944</td>\n",
+       "      <td>49.154644</td>\n",
+       "      <td>53.940269</td>\n",
+       "      <td>-15.373684</td>\n",
+       "      <td>134.421707</td>\n",
+       "      <td>4.695018</td>\n",
+       "      <td>27.268101</td>\n",
+       "      <td>Fw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-01-11</td>\n",
+       "      <td>21:19:58</td>\n",
+       "      <td>19.923120</td>\n",
+       "      <td>-3.911254</td>\n",
+       "      <td>23.650288</td>\n",
+       "      <td>3479.0</td>\n",
+       "      <td>-594.0</td>\n",
+       "      <td>3529.0</td>\n",
+       "      <td>-9.689231</td>\n",
+       "      <td>5.513599</td>\n",
+       "      <td>27.424225</td>\n",
+       "      <td>-1.527719</td>\n",
+       "      <td>1.848902</td>\n",
+       "      <td>5.646790</td>\n",
+       "      <td>17.252220</td>\n",
+       "      <td>Wdg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-01-11</td>\n",
+       "      <td>21:19:58</td>\n",
+       "      <td>19.923120</td>\n",
+       "      <td>-3.911254</td>\n",
+       "      <td>23.650288</td>\n",
+       "      <td>3479.0</td>\n",
+       "      <td>-594.0</td>\n",
+       "      <td>3529.0</td>\n",
+       "      <td>-9.689231</td>\n",
+       "      <td>5.513599</td>\n",
+       "      <td>27.424225</td>\n",
+       "      <td>-1.527719</td>\n",
+       "      <td>1.848902</td>\n",
+       "      <td>5.646790</td>\n",
+       "      <td>17.252220</td>\n",
+       "      <td>Wdg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8666</th>\n",
+       "      <td>2021-03-12</td>\n",
+       "      <td>15:10:56</td>\n",
+       "      <td>65.244423</td>\n",
+       "      <td>-2.809421</td>\n",
+       "      <td>11.866071</td>\n",
+       "      <td>2957.0</td>\n",
+       "      <td>504.0</td>\n",
+       "      <td>2999.0</td>\n",
+       "      <td>9.672700</td>\n",
+       "      <td>236.076218</td>\n",
+       "      <td>259.437256</td>\n",
+       "      <td>11.930249</td>\n",
+       "      <td>120.741478</td>\n",
+       "      <td>28.025890</td>\n",
+       "      <td>45.325508</td>\n",
+       "      <td>1w</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8667</th>\n",
+       "      <td>2021-05-20</td>\n",
+       "      <td>18:34:28</td>\n",
+       "      <td>36.822510</td>\n",
+       "      <td>-5.043742</td>\n",
+       "      <td>31.147676</td>\n",
+       "      <td>5796.0</td>\n",
+       "      <td>-570.0</td>\n",
+       "      <td>5823.0</td>\n",
+       "      <td>-5.616601</td>\n",
+       "      <td>107.475426</td>\n",
+       "      <td>128.942444</td>\n",
+       "      <td>-78.103767</td>\n",
+       "      <td>85.255928</td>\n",
+       "      <td>23.503502</td>\n",
+       "      <td>54.369080</td>\n",
+       "      <td>Irn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8668</th>\n",
+       "      <td>2021-05-14</td>\n",
+       "      <td>18:12:36</td>\n",
+       "      <td>26.975866</td>\n",
+       "      <td>0.071429</td>\n",
+       "      <td>10.187106</td>\n",
+       "      <td>2342.0</td>\n",
+       "      <td>1667.0</td>\n",
+       "      <td>2874.0</td>\n",
+       "      <td>35.442688</td>\n",
+       "      <td>56.624538</td>\n",
+       "      <td>116.348564</td>\n",
+       "      <td>-64.644386</td>\n",
+       "      <td>77.785690</td>\n",
+       "      <td>1.595612</td>\n",
+       "      <td>32.842659</td>\n",
+       "      <td>Irn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8669</th>\n",
+       "      <td>2021-04-08</td>\n",
+       "      <td>21:44:25</td>\n",
+       "      <td>24.185083</td>\n",
+       "      <td>6.030762</td>\n",
+       "      <td>9.705574</td>\n",
+       "      <td>1327.0</td>\n",
+       "      <td>-892.0</td>\n",
+       "      <td>1598.0</td>\n",
+       "      <td>-33.908714</td>\n",
+       "      <td>23.301931</td>\n",
+       "      <td>51.115887</td>\n",
+       "      <td>2.811565</td>\n",
+       "      <td>291.350464</td>\n",
+       "      <td>1.064148</td>\n",
+       "      <td>10.997856</td>\n",
+       "      <td>1w</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8670</th>\n",
+       "      <td>2021-04-08</td>\n",
+       "      <td>21:44:25</td>\n",
+       "      <td>24.185083</td>\n",
+       "      <td>6.030762</td>\n",
+       "      <td>9.705574</td>\n",
+       "      <td>1327.0</td>\n",
+       "      <td>-892.0</td>\n",
+       "      <td>1598.0</td>\n",
+       "      <td>-33.908714</td>\n",
+       "      <td>23.301931</td>\n",
+       "      <td>51.115887</td>\n",
+       "      <td>2.811565</td>\n",
+       "      <td>291.350464</td>\n",
+       "      <td>1.064148</td>\n",
+       "      <td>10.997856</td>\n",
+       "      <td>1w</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8589 rows × 16 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            date      time  ball_speed    azimuth  launch_angle  back_spin  \\\n",
+       "0     2020-02-29  15:39:15   32.401264  14.202585      4.779126     -588.0   \n",
+       "1     2020-02-29  15:39:15   32.401264  14.202585      4.779126     -588.0   \n",
+       "2     2020-12-04  18:37:09   25.904545 -20.152567     20.763006      575.0   \n",
+       "3     2020-01-11  21:19:58   19.923120  -3.911254     23.650288     3479.0   \n",
+       "4     2020-01-11  21:19:58   19.923120  -3.911254     23.650288     3479.0   \n",
+       "...          ...       ...         ...        ...           ...        ...   \n",
+       "8666  2021-03-12  15:10:56   65.244423  -2.809421     11.866071     2957.0   \n",
+       "8667  2021-05-20  18:34:28   36.822510  -5.043742     31.147676     5796.0   \n",
+       "8668  2021-05-14  18:12:36   26.975866   0.071429     10.187106     2342.0   \n",
+       "8669  2021-04-08  21:44:25   24.185083   6.030762      9.705574     1327.0   \n",
+       "8670  2021-04-08  21:44:25   24.185083   6.030762      9.705574     1327.0   \n",
+       "\n",
+       "      side_spin  total_spin   spin_axis  carry_distance  total_distance  \\\n",
+       "0        -117.0       599.0 -168.746277       15.174751       52.801117   \n",
+       "1        -117.0       599.0 -168.746277       15.174751       52.801117   \n",
+       "2         625.0       849.0   47.385944       49.154644       53.940269   \n",
+       "3        -594.0      3529.0   -9.689231        5.513599       27.424225   \n",
+       "4        -594.0      3529.0   -9.689231        5.513599       27.424225   \n",
+       "...         ...         ...         ...             ...             ...   \n",
+       "8666      504.0      2999.0    9.672700      236.076218      259.437256   \n",
+       "8667     -570.0      5823.0   -5.616601      107.475426      128.942444   \n",
+       "8668     1667.0      2874.0   35.442688       56.624538      116.348564   \n",
+       "8669     -892.0      1598.0  -33.908714       23.301931       51.115887   \n",
+       "8670     -892.0      1598.0  -33.908714       23.301931       51.115887   \n",
+       "\n",
+       "      offline_distance  distance_to_pin  max_height  descent_angle club_type  \n",
+       "0            11.593853        95.694733    0.767064       5.391288       Irn  \n",
+       "1            11.593853        95.694733    0.767064       5.391288       Irn  \n",
+       "2           -15.373684       134.421707    4.695018      27.268101        Fw  \n",
+       "3            -1.527719         1.848902    5.646790      17.252220       Wdg  \n",
+       "4            -1.527719         1.848902    5.646790      17.252220       Wdg  \n",
+       "...                ...              ...         ...            ...       ...  \n",
+       "8666         11.930249       120.741478   28.025890      45.325508        1w  \n",
+       "8667        -78.103767        85.255928   23.503502      54.369080       Irn  \n",
+       "8668        -64.644386        77.785690    1.595612      32.842659       Irn  \n",
+       "8669          2.811565       291.350464    1.064148      10.997856        1w  \n",
+       "8670          2.811565       291.350464    1.064148      10.997856        1w  \n",
+       "\n",
+       "[8589 rows x 16 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -123,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
