clean and reorg repo

--- a/notebooks/run_models.ipynb
+++ b/notebooks/run_models.ipynb
@@ -366,6 +366,140 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e9533ac-1771-4669-b4f1-d815ff43d27a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save results\n",
+    "models.results_df.to_csv('../data/model_results.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d676a32e-b20e-41c1-bec5-b36ae9ff0473",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e360ef9-0421-41a3-9d25-e32d229a6dff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get the features of the best model\n",
+    "xgb_reg = models.best_models[3]\n",
+    "feature_importances = xgb_reg.feature_importances_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e6b5f32-055b-4f84-8f10-dcb903ea2e42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a dictionary of column names and feature importances\n",
+    "feature_dict ={}\n",
+    "\n",
+    "for i, col in enumerate(X.columns):\n",
+    "    feature_dict[col] = feature_importances[i]\n",
+    "    \n",
+    "feature_dict = {key: value for key, value in sorted(feature_dict.items(), key=lambda item: item[1])}\n",
+    "\n",
+    "feature_dict_wo_clubs = feature_dict.copy()\n",
+    "\n",
+    "del_features = ['Fw', 'Irn', 'Hyb', '1w', 'Wdg']\n",
+    "\n",
+    "for feature in del_features:\n",
+    "    del feature_dict_wo_clubs[feature]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78670929-7d37-4e43-acc9-568100f6e24a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffb4d4e3-36ce-450c-919b-b05f382ed4a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot feature importances\n",
+    "fig = px.bar(x=feature_dict_wo_clubs.values(),\n",
+    "             y=feature_dict_wo_clubs.keys(),\n",
+    "             labels={\n",
+    "                     'y': 'Features',\n",
+    "                     'x': 'Importance'},\n",
+    "             width=1600,\n",
+    "             height=900)\n",
+    "\n",
+    "fig.update_layout(title={\n",
+    "    'text': 'Feature Importances',\n",
+    "    'font': dict(size=36)},\n",
+    "    margin=dict(l=200, r=200, t=200, b=200))\n",
+    "\n",
+    "fig.write_image(f'../img/feature_importances.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbf2eff7-2cb5-415d-8cd5-b839c84d48a9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9980ae23-faa8-4f6c-85eb-7e45460ecd34",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f68ccaa-3dbe-4589-8324-b26d765a2667",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e5c6f14-0cd8-483c-b601-eb1a2d0971df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8be346f3-40c7-4865-9eeb-10587b17f170",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a36cc7b-3a53-4aa0-a847-82d006a84d8e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
