--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -32,22 +32,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['Irn', 'Fw', 'Wdg', '1w', 'Hyb'], dtype=object)"
+       "(8589, 16)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['club_type'].unique()"
+    "df.shape"
    ]
   },
   {
