--- a/src/run_models.ipynb
+++ b/src/run_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "id": "7022ca92-d2a5-4df5-a9ea-8f2eed146ebe",
    "metadata": {},
    "outputs": [],
@@ -11,10 +11,12 @@
     "import sys  \n",
     "sys.path.insert(0, '..')\n",
     "\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.cross_decomposition import PLSRegression\n",
     "from sklearn.ensemble import GradientBoostingRegressor, RandomForestRegressor\n",
     "from sklearn.linear_model import ElasticNet\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "from src import model\n",
     "import xgboost as xgb"
@@ -46,6 +48,41 @@
     "X.drop('club_type', axis=1, inplace=True)\n",
     "\n",
     "y = df['carry_distance']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "9c0197e3-a015-4b8e-967b-851c8f4421f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# establish baseline\n",
+    "az_rad = X['launch_angle'] * np.pi / 180\n",
+    "g = 9.8\n",
+    "\n",
+    "est_carry = (X['ball_speed'] ** 2 * np.sin(2*az_rad)) / g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "63107b76-00cf-497d-ac86-69e81dd30bc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r2: 0.798360022388313\n",
+      "rmse: 29.348549370324417\n"
+     ]
+    }
+   ],
+   "source": [
+    "# eval baseline\n",
+    "print(f'r2: {r2_score(est_carry, y)}')\n",
+    "print(f'rmse: {mean_squared_error(est_carry, y)**0.5}')"
    ]
   },
   {
